force-app/main/default/objects/PDU_Claim__c/PDU_Claim__c.object-meta.xml
<CustomObject>
    <label>PDU Claim</label>
    <nameField>
        <displayFormat>P-{0000}</displayFormat>
        <label>S.No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PDU Claim</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>