force-app/main/default/objects/PDU_Claim__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>PDU Claim</relationshipLabel>
    <relationshipName>PDU_Claim</relationshipName>
    <type>Lookup</type>
</CustomField>