force-app/main/default/objects/PDU_Claim__c/fields/Attended_Date__c.field-meta.xml
<CustomField>
    <fullName>Attended_Date__c</fullName>
    <label>Attended Date</label>
    <type>Date</type>
</CustomField>