force-app/main/default/objects/PDU_Claim__c/fields/Claimed_Date__c.field-meta.xml
<CustomField>
    <fullName>Claimed_Date__c</fullName>
    <label>Claimed Date</label>
    <type>Date</type>
</CustomField>