force-app/main/default/objects/PDU_Claim__c/fields/Claimed_PDU__c.field-meta.xml
<CustomField>
    <fullName>Claimed_PDU__c</fullName>
    <label>Claimed PDU</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>