force-app/main/default/objects/PDU_Claim__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <formula>Account__r.Email1_Primary__c</formula>
    <label>Email</label>
    <type>Text</type>
</CustomField>