force-app/main/default/objects/PDU_Claim__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <formula>Account__r.Mobile1_Primary__c</formula>
    <label>Phone</label>
    <type>Text</type>
</CustomField>