force-app/main/default/objects/PDU_Claim__c/fields/PMI_ID__c.field-meta.xml
<CustomField>
    <fullName>PMI_ID__c</fullName>
    <label>PMI ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>